<resources>
    <string name="app_name">Eurocity</string>
    <string name="introduce_tu_usuario">Introduce tu usuario</string>
    <string name="siguiente">Siguiente</string>
    <string name="perfil">Perfil</string>
    <string name="mis_destinos">Mis Destinos</string>
    <string name="nuevo_viaje">Nuevo Viaje</string>
    <string name="no_foto_default">¿A qué esperas? ¡Sube una foto de perfil!</string>
    <string name="cl_destino">¿Cúal es tu destino?</string>
    <string name="Roma">Roma</string>
    <string name="Paris">París</string>
    <string name="Londres">Londres</string>
    <string name="Lisboa">Lisboa</string>
    <string name="nqtpayudar">¿En qué te puedo ayudar?</string>
    <string name="idioma">Idioma</string>
    <string name="ubicacion">Ubicación</string>
    <string name="turismo">Turismo</string>
    <string name="valoracion">Valoración</string>
    <string name="aprendido">¿Cúanto has aprendido?</string>
    <string name="no_camera">Se requiere de una cámara</string>
    <string name="no_app">No Packet Manager</string>
    <string name="valorar_nota">¡Pon una nota del 1 al 10 valorando tu experiencia del viaje!</string>
    <string name="lugares_emblematicos">Lugares emblemáticos</string>
    <string name="gastronomia">Gastronomía</string>
    <string name="server_url">http://u017633.ehu.eus:28080/EurocityServer/rest/Eurocity</string>
    <string name="no_internet">No tienes conexión a internet</string>
    <string name="comentarios">Comentarios</string>
    <string name="fotos">Fotos</string>
    <string name="int_comentario">Introduzca tu comentario</string>
    <string name="enviar">Enviar</string>
    <string name="sacar_una_foto">Sacar una foto</string>
</resources>
