<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_viaje_ppal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.borja.eurocity.ViajePpal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/nqtpayudar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/textView" />

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/doge"
            android:id="@+id/imageView"
            android:layout_toRightOf="@+id/textView"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btn1"
        android:layout_margin="5dp"
        android:text="@string/idioma"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/btn2"
        android:layout_margin="5dp"
        android:text="@string/ubicacion"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/btn3"
        android:layout_margin="5dp"
        android:text="@string/turismo"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/btn4"
        android:layout_margin="5dp"
        android:text="@string/valoracion"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/btn5"
        android:layout_margin="5dp"
        android:text="@string/aprendido"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

</LinearLayout>
