<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gastronomia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.borja.eurocity.Gastronomia">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/gastronomia_text">
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="loadForo"
            android:id="@+id/gastronomia_foro_btn"
            android:text="@string/comentarios"
            />
        <EditText
            android:id="@+id/gastronomia_comentario"
            android:hint="@string/int_comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
        <Button
            android:layout_width="match_parent"
            android:id="@+id/gastronomia_btn_comentario"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:visibility="invisible"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/gastronomia_foro">
        </LinearLayout>
    </LinearLayout>

</ScrollView>
